# GVSU-CIS641-PackingTheBits

./: .gitignore  .nojekyll  404.html  README.md  _quarto.yml  diagrams.html  index.html  index.qmd  robots.txt  search.json  sitemap.xml  system_request.html
artifacts/: README.md  system_request.html  system_request.md
docs/: README.md  project-proposal.html  project-proposal.md  software_requirements_specification.html  software_requirements_specification.md  software_requirements_specification_final.html  software_requirements_specification_final.md
meetings/: GVSU-CIS641-PackingTheBits-2024-09-30.html  GVSU-CIS641-PackingTheBits-2024-09-30.md  GVSU-CIS641-PackingTheBits-2024-10-07.html  GVSU-CIS641-PackingTheBits-2024-10-07.md  GVSU-CIS641-PackingTheBits-2024-10-14.html  GVSU-CIS641-PackingTheBits-2024-10-14.md  GVSU-CIS641-PackingTheBits-2024-10-23.html  GVSU-CIS641-PackingTheBits-2024-10-23.md  GVSU-CIS641-PackingTheBits-2024-10-28.html  GVSU-CIS641-PackingTheBits-2024-10-28.md  GVSU-CIS641-PackingTheBits-2024-11-04.html  GVSU-CIS641-PackingTheBits-2024-11-04.md  GVSU-CIS641-PackingTheBits-2024-11-11.html  GVSU-CIS641-PackingTheBits-2024-11-11.md  GVSU-CIS641-PackingTheBits-2024-11-18.html  GVSU-CIS641-PackingTheBits-2024-11-18.md  GVSU-CIS641-PackingTheBits-2024-11-25.html  GVSU-CIS641-PackingTheBits-2024-11-25.md  GVSU-CIS641-PackingTheBits-2024-12-02.html  GVSU-CIS641-PackingTheBits-2024-12-02.md
src/: CMakeLists.txt  README.md
src/src/: CMakeLists.txt  coverage.c  coverage.h  coverage2.c  main.c  version.h
tests/: README.md  actual.sh  compare_test.py  (+5 more)
(+43 files in other folders)
